Fixed Blog Visual Bugs

--- a/src/content/blog/ImitationLearning.mdx
+++ b/src/content/blog/ImitationLearning.mdx
@@ -1,11 +1,13 @@
 export const frontmatter = {
   title: 'My Journey Through Imitation Learning Robotics',
-  date: 'January 11 2026',
+  date: 'January 11, 2026',
   summary: 'Figuring out how imitation learning works with robotics using my SO-101 Robot.',
   tags: ['Robotics', 'ACT', 'Imitation Learning'],
+  readTime: '3 min read'
 }
 
-# What am I doing here?
+
+### What am I doing here?
 
 Well frankly for me I found myself taking an interest in the robotics world more and more. 
 
@@ -25,11 +27,14 @@ I also ended up reading through a lot of what [Physical Intelligence](https://ww
 
 So, I'm going to start figuring out how all of this works in the hopes of making something cool!
 
-# My robot arrives...
+### My robot arrives...
 
 My robot also came as I was making this! And I have fully assembled it and it's been set up and ready to get going! I will give more updates as I go through the proccess of working with this arm!
 
-![](../../assets/blog_images/Assembling_So101.jpeg)
+![Assembling Robot](/blog_images/Assembling_So101.jpeg)
 
-![](../../assets/blog_images/Testing_So101_Arms.mov)
+
+<video controls style={{maxWidth: '375px', maxHeight: '500px', marginTop: '1.5rem', marginBottom: '1.5rem', borderRadius: '0.5rem'}}>
+  <source src="/blog_images/Testing_So101_Arms.mp4" type="video/mp4" />
+</video>
 
