Fixed import error

--- a/src/content/blog/ACT_2.mdx
+++ b/src/content/blog/ACT_2.mdx
@@ -1,4 +1,5 @@
 import { BlogVideo } from '../../components/BlogVideo'
+import { BlogImage } from '../../components/BlogImage.tsx'
 
 export const frontmatter = {
   title: 'Trying a new ACT task and Dataset Vizualizer',
